# C-homework-sem2

./: .clang-format  README.md
src/: CMakeLists.txt  avl.c  avl.h  dfa.c  dfa.h  functions.c  functions.h  main.c  tests.c
src/csv/: CMakeLists.txt  csv.c  csv.h  main.c  tests.c
